# tampa-dev-coord

./: .gitignore  Procfile  README.md  data.db  import_geojson.sh  metadata.json  pyproject.toml  requirements.txt  script.py
.github/workflows/: update-data.yml
dev-locations/: locations.db  metadata.json  settings.json
dev-locations/static/: override.css
dev-locations/static/css/: base.css  fonts.css  layout.css  site.css  theme.css  tokens.css
dev-locations/static/css/components/: btn.css  mainnav.css  masthead.css  site-footer.css
dev-locations/templates/: _monitor_footer.html  _monitor_header.html  base.html  index.html
scripts/: sync-design.js
